2007-12-08  Takeru INOUE  <takeru.inoue _ gmail.com>

        * release 0.0.1: created by Module::Starter